Update to avoid to little whitespace.

--- a/css/style.css
+++ b/css/style.css
@@ -165,7 +165,7 @@ h2 small {
 /* } */
 
 nav ul {
-  margin: -10px 0 0;
+  margin: -7px 0 0;
   padding: 0;
   list-style: none;
 }
